# pico-imu

./: CMakeLists.txt  LICENSE  README.md  main.c  mpu9250.c  mpu9250_regs.h
src/: IMU.cpp  IMU.h  MPU9250.cpp  MPU9250.h  Quaternion.cpp  Quaternion.h  SourcesList.cmake  SpiUtils.h  eulerAngle.h  euler_angles.h  imu.c  imu.h  main.c  main.cpp  mpu9250.c  mpu9250.h  mpu9250_regs.h  quaternion.c  quaternion.h  vector.h
